spacing issues fixed

--- a/vtr-ui/src/app/components/pages/page-security-antivirus/page-security-antivirus.component.scss
+++ b/vtr-ui/src/app/components/pages/page-security-antivirus/page-security-antivirus.component.scss
@@ -187,4 +187,7 @@
 			line-height: 2.3rem;
 		}
 	}
+	.antivirus-block{
+		margin-top: 4rem;
+	}
 }
